# git_jenkins

./: CMakeLists.txt  README.md
exe1/: CMakeLists.txt  Makefile  hello.txt
exe2/: CMakeLists.txt  fail.cpp  main.cpp  read.cpp
